src/assets/styles/docInvoice.scss
@import '../styles/mixins.scss';

.invoice-details {
  &__content {
    display: flex;
    flex-direction: column;
    padding: 1rem;
  }

  // &__text {
  // }

  .template-container {
    width: 100%;
    overflow-x: auto;
    //overflow-y: hidden;
    -webkit-overflow-scrolling: touch;
    text-align: center;

    .template-image {
      width: 100%;
      max-width: 100%;
      display: block;
      margin: 0 auto;
    }
  }

  @media (min-width: 768px) {
    &__content {
      flex-direction: row;
      justify-content: space-between;
      padding: 2rem;
    }

    .template-container {
      width: 50vw;
    }
  }
}

.invoice-subtitle {
  justify-content: flex-start !important;
  margin-bottom: 30px;

  @include mobile(600px) {
    margin-bottom: 20px;
  }
}

.invoice-back-button {
  display: flex;
  align-items: flex-end;
  gap: 8px;

  p {
    color: var(--dark);
    font-weight: 500;
  }

  .back-button {
    background: var(--dark);
    display: flex;
    align-items: center;
    justify-content: center;
    width: 20px;
    height: 20px;
    border-radius: 100vh;
    color: var(--white);

    .back-icon {
      transform: rotate(180deg);
      width: 5px;
      height: 9px;
    }
  }
  .back-button:hover {
    background: #4eb9c0;
  }
}

.invoice-price {
  margin: 40px 0;

  @include mobile(600px) {
    margin: 30px 0;
  }
}

.invoice-description {
  max-width: 511px;

  &__header {
    margin-top: 60px;

    @include mobile(600px) {
      margin-top: 6rem;
    }
  }
}

.privacy-info {
  border-top: 1px solid var(--border3);
  padding-top: 40px;
  margin: 40px 0;

  @include mobile(600px) {
    margin: 30px 0;
    padding-top: 30px;
  }

  &__title {
    font-weight: 600;
    margin-bottom: 8px;
    color: var(--dark) !important;
  }

  &__description {
    color: var(--text2) !important;

    a {
      text-decoration: underline;
    }
  }

  &__button {
    @include mobile(600px) {
      width: 100%;
    }
  }
}

.template-container {
  background: linear-gradient(282.33deg, #eafafe 52.56%, #f2fdfa 115.44%);
  flex: 1;
  //max-width: 65vw;
  padding: 40px 20px 0;

  @include mobile(1105px) {
    width: 100%;
    max-width: unset;
  }

  @include mobile(600px) {
    padding: 25px 20px;
  }

  .template-image {
    background: var(--white);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    border: 1px solid #f6f6f6;
    min-height: 100vh;
    margin: 0 auto;
    max-width: 90%;

    @include mobile(1105px) {
      min-height: 50vh;
    }

    @include mobile(600px) {
      min-height: 444px;
    }

    &__text {
      // max-width: 70%;
      //   opacity: 30%;
      padding: 0 2.7rem;
      font-family: Inter;
      //  font-size: 0.8rem;
      font-weight: 500;
      overflow: hidden;
      text-align: center;
    }
  }
}

.confirm-text {
  margin: 20px 0 40px;
}

.confirm-buttons {
  display: flex;
  gap: 20px;
  border-top: 1px solid var(--border3);
  padding-top: 20px;

  .confirm-button {
    padding: 1rem;
  }

  @include mobile(1105px) {
    justify-content: space-between;
  }

  @include mobile(430px) {
    flex-direction: column;
    gap: 20px;
    padding-top: 30px;
  }

  a {
    @include mobile(430px) {
      width: 100%;
    }
  }
}

.document-details {
  display: flex;
  flex-direction: column;
  gap: 24px;
  margin: 40px 0;

  //max-width: 511px;
  background-color: #ffffff;
  padding: 1rem 1rem;
  border-radius: 10px;
  border: 1px solid #f0ecf5;

  @include mobile(600px) {
    margin: 30px 0;
    gap: 20px;
  }

  &__input {
    .label {
      font-weight: 700;
      font-family: 'PT Serif', serif;
      font-size: 20px;
      line-height: 27px;
      margin-bottom: 12px;
    }
  }

  &__input {
    textarea {
      width: 100%;
      padding: 10px;
      border: 1px solid var(--border);
      border-radius: 5px;
      resize: vertical;
      min-height: 100px;
    }
  }

  .react-datepicker-wrapper {
    width: 100%;
    input {
      width: 100%; // Ensure input fields take up full width
      margin-bottom: 15px;
      font-family: Inter;
      font-weight: 400;
      padding: 10px 40px 10px 10px; // Adjust padding for the calendar icon
      border: 1px solid #cfd3dd;
      border-radius: 5px;
      font-size: 1rem;
      background-image: url('../Images/Calendar.svg'); //calendar
      background-repeat: no-repeat;
      background-position: right 10px center; // icon position
    }
  }

  &__multi-insert {
    display: flex;
    flex-direction: column;
    gap: 10px;
  }

  &__multi-insert-tags {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
  }

  &__multi-insert-tag {
    background-color: var(--secondary);
    padding: 5px 10px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    gap: 5px;
  }

  &__multi-insert-tag-remove {
    background: none;
    border: none;
    cursor: pointer;
    color: var(--dark);
  }
}

.document-check {
  display: flex;
  flex-direction: column;
  gap: 16px;
  margin-top: 16px;
}

.direction-buttons {
  display: flex;
  justify-content: flex-end; /* Aligns the buttons to the right */
  gap: 10px; /* Optional: Adds space between the buttons */

  &__noboder {
    border-top: none !important;
  }

  @include mobile(1105px) {
    justify-content: space-between;
  }

  @include mobile(600px) {
    padding-top: 30px;
  }

  .invoice-back-button {
    display: flex;
    align-items: center;

    .back-button {
      display: flex;
      align-items: center;
      justify-content: center;
    }

    .back-icon {
      transform: rotate(180deg); /* Optional: Rotates the icon */
    }
  }
}

.card-date {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 16px;
  margin-top: 16px;

  @include mobile(600px) {
    gap: 10px;
    margin-top: 10px;
  }
}

.card {
  display: flex;
  gap: 8px;

  &__type {
    width: 35px;
    height: 24px;
  }
}

.options-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 24px;
  max-width: 849px;
  margin: 50px auto 0;

  @include mobile(783px) {
    grid-template-columns: repeat(2, 1fr);
  }

  @include mobile(600px) {
    grid-template-columns: 1fr;
    margin: 0 auto;
    gap: 20px;
  }

  .option {
    border: 1px solid var(--border);
    background: var(--white);
    border-radius: 20px;
    padding: 22px 31px;
    color: var(--dark);
    text-align: center;
    font-weight: 600;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 96px;

    &:hover {
      border: 1px solid var(--dark);
      background: var(--secondary);
    }

    p {
      max-width: 178px;
      color: var(--dark);
    }
  }
}

/* New styles for ProgressBar and ContactSection */
.progress-bar {
  margin-top: -7.2rem;
  margin-bottom: 24px;
  text-align: left;
  width: 100%;

  @include mobile(600px) {
    padding-top: 3rem;
    padding-top: 3rem;

    margin-bottom: 1rem;
  }

  p {
    font-weight: 400;
    font-size: 1.375rem;
    font-family: 'PT Serif', serif;
  }

  &__container {
    background-color: #e0f3f3;
    border-radius: 5px;
    padding: 1px;
    margin-top: 10px;

    @include mobile(600px) {
      margin-bottom: 1rem;
    }
  }

  &__fill {
    background-color: #4eb9c0;
    width: 10%;
    height: 10px;
    border-radius: 5px;
  }
}

/* Template Modal Styles */
.template-modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.template-modal-content {
  background: #fff;
  border-radius: 8px;
  width: 90%;
  max-width: 500px;
  padding: 2rem;
  position: relative;

  .template-modal-header {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;

    &-text {
      display: block;
      font-family: Inter;
      color: #425669;
      font-weight: 400;

      h2 {
        margin: 0;
      }

      p {
        margin-top: 1.5rem;
        margin-bottom: 0.85rem;
      }
    }

    .template-modal-close {
      background: none;
      border: 2px solid #0e2557;
      padding: 0.17rem 0.56rem;
      border-radius: 50%;
      font-size: 24px;
      cursor: pointer;
    }
  }

  .template-modal-body {
    margin-top: 20px;

    .template-accordion {
      margin-top: 20px;

      .template-accordion-item {
        background: #f9fafa;
        border-bottom: none;
        margin-bottom: 1rem;
        padding: 0.7rem 1.3rem;
        border: 1px solid #f0f2f3;

        border-radius: 0.6rem;

        .template-accordion-header {
          display: flex;
          justify-content: space-between;
          cursor: pointer;
          padding: 10px 0;
          font-family: PT Serif;
          font-weight: 800;
          font-size: 1.2rem;

          svg {
            border: 1px solid #cfd3dd;
            border-radius: 50%;
            padding: 0.15rem;
          }
        }

        .template-accordion-body {
          padding: 10px 0;
          font-family: Inter;
          color: #1c1c1c;
          font-size: 0.9rem;
        }
      }
    }
  }

  .template-modal-footer {
    text-align: center;
    margin-top: 20px;

    h1 {
      margin-bottom: 10px;
    }

    p {
      margin-bottom: 20px;
    }

    .contact-button {
      background-color: var(--primary);
      padding: 1rem 0;
      border-radius: 5px;
      color: #00b8bf;
      font-weight: 600;
      text-decoration: underline;
      display: flex;
      align-items: center;
      justify-content: center;
      cursor: pointer;

      svg {
        margin-left: 5px;
      }
    }
  }
}

/* Contact Section Styles */
.contact-section {
  background-color: #ffffff;
  padding: 20px;
  border-radius: 10px;
  border: 1px solid #f0ecf5;
  display: flex;
  flex-direction: column;
  gap: 12px;
  text-align: left;
  margin-top: 10rem;

  h1 {
    margin-bottom: 8px;
    font-family: PT Serif;
    font-size: 1.4rem;
    font-weight: 700;
    line-height: 31.06px;
  }

  p {
    font-family: Inter;
    font-size: 16px;
    font-weight: 400;
    line-height: 19.36px;
  }
  @media (min-width: 768px) {
    margin-top: 1rem;
    //margin-bottom: 3rem;
  }

  .contact-form {
    display: flex;
    flex-direction: column;
    align-items: flex-start; // Align items to the start of the container
    padding: 0.5rem 0.2rem;

    label {
      width: 100%; // Ensure the label takes up full width
      font-family: Inter;
      font-size: 0.85rem;
      font-weight: 500;
      text-align: left;
      padding-bottom: 0.6rem;
      margin-bottom: 5px; // Add margin to separate from input field

      @include mobile(530px) {
        // Adjustments for mobile view if needed
      }

      @include mobile(1040px) {
        // Adjustments for mobile view if needed
      }
    }

    input,
    textarea {
      width: 100%; // Ensure input fields take up full width
      margin-bottom: 15px;
      font-family: Inter;
      font-weight: 400;
      padding: 10px;
      border: 1px solid #cfd3dd;
      border-radius: 5px;
      font-size: 1rem;
    }

    button {
      width: 100%; // Ensure button takes up full width
      margin-top: 1.2rem;
      padding: 10px;
      color: var(--white);
      background-color: #0e2557;
      border: none;
      border-radius: 1.5rem;
      cursor: pointer;
      font-size: 1rem;
      font-weight: bold;
      text-align: center;
    }
  }

  .contact-button {
    background-color: var(--primary);
    padding: 1.7rem 0;
    border-radius: 5px;
    color: #00b8bf;
    font-weight: 600;
    text-decoration: underline;
    display: flex;
    align-items: center;
    cursor: pointer;

    svg {
      margin-left: 5px;
    }
  }
}

